Works with all colors now.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,7 +99,8 @@
         android:id="@+id/resistorValue"
         android:text="TEST"
         android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"/>
+        android:layout_alignParentBottom="true"
+        android:background="#FFFFFF"/>
 
 
 </RelativeLayout>
